# shortstoryserver3

./: .editorconfig  Cargo.toml  README.md  diesel.toml
kbs3-app/: Cargo.toml
kbs3-cli/: Cargo.toml
kbs3-db/: Cargo.toml
kbs3-db/src/: models.rs  schema.rs
migrations/2020-05-24-065440_create_users/: up.sql
