[package]
name = "kbs3-db"
version = "0.1.0"
authors = ["Yū Kobayashi <kb10uy@kb10uy.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.diesel]
git = "https://github.com/diesel-rs/diesel"
features = ["postgres"]

[dependencies.chrono]
version = "0.4"
